[gd_scene load_steps=9 format=3 uid="uid://dofde0twb7iyy"]

[ext_resource type="Script" path="res://scenes/player/RussianInkermanReg.gd" id="1_xtctw"]
[ext_resource type="Texture2D" uid="uid://bhuv5rfa1aamb" path="res://graphics/player/RussianRegAni.png" id="2_xwgje"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbsil"]
size = Vector2(95.9999, 559.989)

[sub_resource type="Animation" id="Animation_8kg2m"]
resource_name = "BayonetFront"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ogn8d"]
resource_name = "BayonetSide"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_db8cf"]
resource_name = "Fire"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_sn4ok"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hs2gb"]
_data = {
"BayonetFront": SubResource("Animation_8kg2m"),
"BayonetSide": SubResource("Animation_ogn8d"),
"Fire": SubResource("Animation_db8cf"),
"RESET": SubResource("Animation_sn4ok")
}

[node name="RussianReg" type="CharacterBody2D"]
script = ExtResource("1_xtctw")

[node name="ShootStart" type="Marker2D" parent="."]
position = Vector2(-1.03746e-09, -96)
rotation = -1.56907

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.0703926, 31.9999)
rotation = -1.57215
shape = SubResource("RectangleShape2D_xbsil")

[node name="Timers" type="Node2D" parent="."]

[node name="FireTimer" type="Timer" parent="Timers"]
wait_time = 0.7
autostart = true

[node name="FireableTimer" type="Timer" parent="Timers"]
wait_time = 2.0
autostart = true

[node name="HealthTimer" type="Timer" parent="Timers"]
autostart = true

[node name="RussianRegAni" type="Sprite2D" parent="."]
texture = ExtResource("2_xwgje")
hframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="RussianRegAni"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_hs2gb")
}

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timers/FireTimer" to="." method="_on_fire_timer_timeout"]
[connection signal="timeout" from="Timers/FireableTimer" to="." method="_on_fireable_timer_timeout"]
[connection signal="timeout" from="Timers/HealthTimer" to="." method="_on_health_timer_timeout"]
